--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "trailiteasy",
   "version": "0.1.0",
   "private": true,
+  "main": "web.js",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "react": "^15.6.1",
@@ -10,10 +11,17 @@
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10"
   },
+  "keywords": [
+    "heroku",
+    "node.js"
+  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "8.3.0"
   }
 }
